--- a/localization/en_US/loc.json
+++ b/localization/en_US/loc.json
@@ -23,6 +23,9 @@
     },
     "user": {
       "reply": "Your tag: %tag\nYour ID: %id"
+    },
+    "xp": {
+      "reply": "You currently have %xp XP!"
     }
   }
 }
