Fix pronouns get reply and add source (github) command

--- a/localization/de_DE/loc.json
+++ b/localization/de_DE/loc.json
@@ -34,6 +34,9 @@
     "server": {
       "reply": "Servername: %name\nMitgliederzahl: %count"
     },
+    "source": {
+      "reply": "https://github.com/pixeldasher/smolbot"
+    },
     "user": {
       "embed": {
         "creation": "Erstellungsdatum",
